# Player-Loyalty-App

./: .dockerignore  .env.example  .gitattributes  .gitignore  .npmrc  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  README.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  prettier.config.js  turbo.json
apps/backend/: .coverage  .dockerignore  CLAUDE.md  Dockerfile  alembic.ini  openapi.json  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 075e3c13a8eb_rewards_marketplace.py  24c7cfb725a4_content_items.py  298f119efdef_reservations_valet.py  3826f5990172_wallets_wallet_transactions_ledger.py  38c9b6141be2_initial_baseline.py  39a1c2a88bf0_tenant_config_appearance.py  44dc6a6673af_digital_keys.py  4f2583a7d988_notifications_deliveries.py  50613014b5e1_player_kyc_status_devices.py  65386d404a8e_geofencing_zones_beacons_triggers_.py  7d81fd336deb_games_catalog_favorites.py  96f364261601_tenants_table.py  9f4ad8eadf22_concierge_answers_rg_flags.py  a1c282422293_concierge_data_model.py  a1db0b911e7d_tenant_config_concierge_settings.py  a5c1e8f7d629_tenant_config_min_app_version.py  b4e1f77d98c0_support_faqs_chat_tickets.py  b7c4a9d21e03_app_runtime_rls_role.py  b9e2f6a8c531_refresh_token_families.py  c3f8b2a1d905_wallet_pending_ledger_guards.py  c90137cab6fa_tenant_config_and_themes.py  ce8d20d33c35_offers_promotions_redemptions_player_.py  d08173bc528d_audit_logs_analytics_events.py  d4e7a6b3c218_player_scoped_idempotency.py  e11a759e902c_identity_rbac_players.py  e9b5c7d2f416_player_otp_attempts.py  f2a8d9c4b317_players_rg_update_permission.py
apps/backend/app/: __init__.py  main.py  seed.py
apps/backend/app/adapters/: __init__.py  caching.py  factory.py  travel_model.py
apps/backend/app/adapters/mock/: __init__.py  base.py  cashless.py  chat.py  digital_key.py  geo.py  kyc.py  llm.py  loyalty.py  payment.py  push.py  travel.py  weather.py
apps/backend/app/adapters/real/: llm.py  travel.py  weather.py
apps/backend/app/api/v1/: router.py
apps/backend/app/core/: cache.py  deps.py  errors.py  logging.py  middleware.py  pagination.py  ratelimit.py  security.py  settings.py  storage.py
apps/backend/app/db/: __init__.py  base.py  guards.py  rls.py  session.py
apps/backend/app/modules/account/: router.py  schemas.py  service.py
apps/backend/app/modules/audit/: models.py  router.py  schemas.py  service.py
apps/backend/app/modules/concierge/: models.py  prompts.py  router.py  schemas.py  scoring.py  service.py  tools.py
apps/backend/app/modules/content/: models.py  router.py  schemas.py  service.py
apps/backend/app/modules/digitalkey/: models.py  router.py  schemas.py  service.py
apps/backend/app/modules/games/: models.py  router.py  schemas.py  service.py
apps/backend/app/modules/geofencing/: models.py  router.py  schemas.py  service.py
apps/backend/app/modules/identity/: models.py  router.py  schemas.py  service.py
apps/backend/app/modules/notifications/: models.py  router.py  schemas.py  service.py
apps/backend/app/modules/offers/: models.py  router.py  schemas.py  service.py
apps/backend/app/modules/players/: deps.py  models.py  router.py  (+2 more)
apps/backend/app/ports/: __init__.py  cashless.py  chat.py  digital_key.py  errors.py  geo.py  kyc.py  llm.py  loyalty.py  payment.py  push.py  travel.py  types.py  weather.py
apps/backend/app/rbac/: __init__.py  deps.py  matrix.py
apps/backend/app/tenancy/: __init__.py  deps.py
apps/backend/tests/: _helpers.py  conftest.py  test_account.py  test_adapter_contracts.py  test_appearance.py  test_audit.py  test_audit_coverage.py  test_auth_admin.py  test_auth_player.py  test_cache.py  test_concierge_admin.py  test_concierge_api.py  test_concierge_models.py  test_concierge_output_guard.py  test_concierge_ports.py  test_concierge_scoring.py  test_concierge_tools.py  test_content.py  test_cross_tenant_api.py  test_db.py  test_digitalkey.py  test_e2e_vertical_slice.py  test_games.py  test_geofencing.py  test_health.py  test_idempotency_scope.py  test_manifest.py  test_notifications.py  test_offers.py  test_pagination_and_hardening.py  test_rate_limit.py  test_rbac_matrix.py  test_refresh_rotation.py  test_reservations.py  test_rewards.py  test_rg_flags.py  test_rls.py  test_rls_role.py  test_scoped_admin.py  test_seed.py  (+6 more)
(+454 files in other folders)
