[project]
name = "player-backend"
version = "0.0.0"
description = "Player Mobile App backend — FastAPI modular monolith"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "structlog>=24.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pyjwt>=2.9",
    "argon2-cffi>=23.1",
    "email-validator>=2.1",
    "boto3>=1.34",
    "httpx>=0.28.1",
    "redis>=8.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest-cov>=7.1.0",
    "pre-commit>=4.0",
]

# This is an application, not a distributable library — uv should not try to build/install it.
[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

# Coverage focuses on the domain code; seed + migrations are excluded. Run explicitly with
# `uv run pytest --cov` (not enforced on the default run to keep it fast).
[tool.coverage.run]
source = ["app"]
omit = ["app/seed.py", "alembic/*"]

[tool.coverage.report]
show_missing = true
# Coverage floor (R21) — a ratchet below current (~85%). Enforced when CI runs `pytest --cov`
# (`uv run pytest --cov=app`); the default no-cov run stays fast. Raise as coverage grows.
fail_under = 80

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Alembic autogenerates these with a fixed template (unused imports, long lines).
"alembic/versions/*" = ["F401", "E501", "I001"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
ignore_missing_imports = true
